<resources>
    <string name="app_name">LIC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Logispark Inventory Control</string>
    <string name="nav_header_subtitle">Anushka PVT.LTD</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="search">Search</string>
    <string name="title_activity_wholesale">Wholesale</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_online">Online</string>
    <string name="title_activity_insights">Insights</string>
    <string name="title_activity_daily_sales">Daily Sales</string>
    <string name="title_activity_return">Return</string>
    <string name="title_activity_credit">Credit</string>
    <string name="To">TO</string>
    <string name="size">Size</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Import Report</string>
    <string name="sales">Sales</string>
    <string name="profit">Profit</string>
    <string name="inventory">Inventory</string>
    <string name="imports">Import</string>
    <string name="title_activity_online__undelievered">Online_Undelievered</string>
    <string name="date">Date</string>
    <string name="brand">Brand</string>
    <string name="code">Code</string>
    <string name="type">Type</string>
    <string name="no_data_found">No Data Found</string>
    <string name="quantity">Quantity</string>
    <string name="sp">SP:</string>
    <string name="cp">CP:</string>
    <string name="total">Total</string>

    <string-array name="Options">
        <item>Product Id</item>
        <item>Brand</item>
        <item>Type</item>

    </string-array>

    <string-array name="Optionswholesale">
        <item>name</item>
        <item>contactNo</item>
        <item>address</item>
    </string-array>

    <string-array name="Optionscredit">
        <item>Name</item>
        <item>Address</item>

    </string-array>

    <string-array name="Optionsdelievered">
        <item>Name</item>
        <item>Pcode</item>
        <item>Address</item>
        <item>Quantity</item>
        <item>Price</item>


    </string-array>
</resources>
