<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Main.main.Report"
  >

    <RelativeLayout
        android:layout_marginTop="55dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/navbar2"
        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayoutdateselect"
        android:background="@drawable/linearbackgrounf"

        android:orientation="horizontal"
        android:weightSum="3"
       >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start Date"
            android:layout_weight="1"

            android:id="@+id/startdate"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/To"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enddate"

            android:text="End Date"
            android:layout_weight="1"
            />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/kk"
        android:id="@+id/linearlayoutreport"
        android:layout_below="@id/linearlayoutdateselect"
        android:weightSum="4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/profitbutton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"

            android:background="@drawable/side"
            android:text="@string/profit"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/salesbutton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:background="@drawable/side"
            android:text="@string/sales"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/importbutton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/side"

            android:text="@string/imports"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/inventorybutton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/side"

            android:text="@string/inventory"
            android:textAlignment="center"
            android:textSize="15sp" />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragmentplace"
        android:layout_below="@+id/linearlayoutreport"/>

    </RelativeLayout>

</RelativeLayout>