<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.Fragments.Profitreportfragment">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rr1"
        android:layout_below="@id/rr2"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:id="@+id/linearlatou"
            android:background="@drawable/jjj"
            android:weightSum="7">



            <TextView
                android:id="@+id/inventory_datereport"
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:text="@string/date"
                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:maxLength="10"
                android:layout_weight="1"
                android:textAlignment="center"

                android:textColor="@color/background"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:id="@+id/inventory_report_code"
                android:layout_margin="2dp"
                android:textSize="15sp"
                android:textColor="@color/background"
                android:ellipsize="marquee"
                android:textAlignment="center"
                android:maxLength="10"
                android:layout_weight="1"
                android:text="Name"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:id="@+id/inventory_report_brand"
                android:textSize="15sp"
                android:layout_margin="2dp"
                android:textColor="@color/background"
                android:ellipsize="marquee"
                android:maxLength="5"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="PID"
                android:textStyle="normal"/>



            <TextView
                android:id="@+id/inventory_report_quan"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="Qunatity"
                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:maxLength="10"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/inventory_reportwholsaler"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="Wholesaler"
                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:maxLength="10"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/inventory_report_cp"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="Cp"
                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:maxLength="10"
                android:layout_weight="1"
                android:textAlignment="center"

                android:textColor="@color/background"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/inventory_report_mp"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="Mp"
                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:maxLength="10"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="15sp"
                android:textStyle="normal" />




        </LinearLayout>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rr1"
        android:id="@+id/recyclefrag_inventoryreport">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rr2"

        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:id="@+id/linearlatou2"
            android:background="@drawable/kk"
            >


            <TextView
                android:id="@+id/totalheader"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/total"
                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:maxLength="10"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/CPhead_inventory"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/cp"
                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:maxLength="10"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/totalcostprice_inventory"
                android:layout_width="wrap_content"
                android:layout_height="20dp"

                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:maxLength="10"
                android:layout_weight="1"
                android:textAlignment="center"

                android:textColor="@color/background"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sPhead_inventory"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/sp"
                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:maxLength="10"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/totalsellingprice_inventory"
                android:layout_width="wrap_content"
                android:layout_height="20dp"

                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:maxLength="10"
                android:layout_weight="1"
                android:textAlignment="center"

                android:textColor="@color/background"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qhead_inventory"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/quantity"
                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:maxLength="10"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/totalquantity"
                android:layout_width="wrap_content"
                android:layout_height="20dp"

                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:maxLength="10"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/progress_circularinventoryfrag"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data_found"
        android:textSize="20sp"
        android:id="@+id/nodatafound"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rr1"/>


</RelativeLayout>